# qbot

./: .gitmodules  LICENSE  README.md
src/nao_puppet/: .hgignore  CMakeLists.txt  merge.py  package.xml
src/nao_puppet/.hg/: dirstate  hgrc  undo.desc
src/nao_puppet/.hg/cache/: branchheads-served
src/nao_puppet/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/nao_puppet/.hg/store/data/: _c_make_lists.txt.i  icon.png.i  package.xml.i  setup.py.i  ~2ehgignore.i
src/nao_puppet/.hg/store/data/launch/: nao__puppet.launch.i
src/nao_puppet/.hg/store/data/msg/: _move_head.msg.i  _status.msg.i
src/nao_puppet/behaviours/alize-dance/: alize-dance.pml  manifest.xml
src/nao_puppet/behaviours/alize-dance/dance/: behavior.xar
src/nao_puppet/behaviours/classical_music/: classical_music.pml  manifest.xml
src/nao_puppet/behaviours/classical_music/beethoven/: behavior.xar
src/nao_puppet/behaviours/classical_music/brahms/: behavior.xar
src/nao_puppet/behaviours/classical_music/carol_of_the_bells/: behavior.xar
src/nao_puppet/behaviours/classical_music/extra_carol1/: behavior.xar
src/nao_puppet/behaviours/classical_music/extra_carol2/: behavior.xar
src/nao_puppet/behaviours/classical_music/extra_carol3/: behavior.xar
src/nao_puppet/behaviours/classical_music/mozart/: behavior.xar
src/nao_puppet/behaviours/puppet_exercise/: manifest.xml  puppet_exercise.pml
src/nao_puppet/behaviours/puppet_exercise/exercise_left_arm/: behavior.xar
src/nao_puppet/behaviours/puppet_exercise/exercise_left_leg/: behavior.xar
src/nao_puppet/behaviours/puppet_exercise/exercise_right_arm/: behavior.xar
src/nao_puppet/behaviours/puppet_exercise/exercise_right_leg/: behavior.xar
src/nao_puppet/behaviours/puppet_exercise/stretch_arms/: behavior.xar
src/nao_puppet/behaviours/taichi/: manifest.xml  taichi.pml
src/nao_puppet/behaviours/taichi/dance/: behavior.xar
src/nao_puppet/launch/: nao_puppet.launch
src/nao_puppet/nodes/: naobehaviour_node.py  naocamera_node.py  naomic_node.py  naomicplayer_node.py  naomotion_node.py  naoposture_node.py  naospeech_node.py  naostatus_node.py  puppet_ui_node.py
src/nao_puppet/scripts/: extractor.py  video_extractor.py
src/nao_puppet/src/nao_puppet_lib/: __init__.py  activity_ui.py  camera_ui.py  main_ui.py  naobehaviour.py  naocamera.py  naomic.py  naomotion.py  naoposture.py  naospeech.py  naostatus.py  rospy_relay.py  speech_ui.py  status_ui.py  stringbuttons_ui.py
src/nlp/: setup.py  (+2 more)
(+167 files in other folders)
