<package>
  <name>nao_puppet</name>
  <version>0.0.1</version>
  <description>
    Code to remotely control NAO for CWH experiments.
  </description>
  <maintainer email="miguel.sarabia@imperial.ac.uk">Miguel Sarabia</maintainer>
  <license>BSD</license>

  <author>Miguel Sarabia</author>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- No build dependencies, as all code it's in python -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
